zoom for game on responsive rowks correctly -- z-index of chat and contact components has been uptaded to on the fullsize game

--- a/src/frontend/static/style/components/Chat/ChatComponent.css
+++ b/src/frontend/static/style/components/Chat/ChatComponent.css
@@ -11,7 +11,7 @@ chat-component {
 	position: fixed;
 	bottom: 1rem;
 	right: 2rem;
-	z-index: 3;
+	z-index: 10;
 	width: fit-content;
 }
 
