--- a/src/frontend/static/style/components/Contacts/ContactMenu.css
+++ b/src/frontend/static/style/components/Contacts/ContactMenu.css
@@ -7,7 +7,7 @@
 
 contact-menu-component {
     position: fixed;
-    z-index: 4;
+    z-index: 10;
     bottom: 0;
     right: 0;
 }
